# agent66

./: .env  .env.development  .env.example  .env.production  .env.template  .env.template.secure  .gitignore  .mcp.json  .prettierrc  .vercelignore  API.md  ARCHITECTURE.md  CLAUDE.md  COMPLETE-DEPLOYMENT-GUIDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.api  Dockerfile.backend  Dockerfile.frontend  MIGRATION_PLAN_APP_V2.md  OPTIMIZATION_STATUS.md  PERFORMANCE-IMPLEMENTATION-SUMMARY.md  README.md  README_OPTIMIZED.md  SECURITY_NOTES.md  SETUP.md  TASK_log.md  TESTING_FRAMEWORK_README.md  TESTS.md  UI_SIMPLIFICATION_SUMMARY.md  api_fastapi.py  config.production.yaml  config.yaml  config_loader.py  config_validator.py  coverage.xml  cursor_follow_tasks.md  custom-elements.json  demo_training_system.py  docker-compose.dev.yml  (+43 more)
smc_trading_agent/: .coverage  .env  .env.production.example  .gitignore  .vercelignore  CONTRIBUTING.md  COVERAGE_REPORT.md  Cargo.toml  Dockerfile.optimized  IMPLEMENTATION_REPORT.md  INTEGRATION_TESTING_GUIDE.md  INTEGRATION_TESTING_SUMMARY.md  ML_IMPLEMENTATION_REPORT.md  ML_TRAINING_DOCUMENTATION.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_STATUS.md  README.md  README_WEB_APP.md  READY_TO_LAUNCH.md  STREAM_PROCESSOR_README.md  TESTING_README.md  __init__.py  api_fastapi.py  binance_rate_limiting_fix_conversation.md  chat_export_2025-08-12.md  chat_export_full_2025-08-12.md  complete_conversation_export_from_start.md  config.yaml  config_validator.py  conversations-summary-last-15h.md  data_pipeline.Dockerfile  demo_testing_framework.py  docker-compose.optimized.yml  env.example  error_handlers.py  error_handling_strategy.md  health_monitor.py  index.html  integration_example.py  isolated_test.py  (+37 more)
smc_trading_agent/.hive-mind/: config.json  hive.db  hive.db-shm  hive.db-wal
smc_trading_agent/.kilocode/: mcp.json
smc_trading_agent/.kiro/: gemini_crazy
smc_trading_agent/.swarm/: memory.db
smc_trading_agent/api/: app.ts  auth-mfa.ts  server.ts.rej  supabase.ts  websocket_server.py
smc_trading_agent/compliance/: __init__.py  mifid_reporting.py
smc_trading_agent/config/: __init__.py  base.yaml  development.yaml  local.yaml.example  trivy.yaml  (+2 more)
(+946 files in other folders)
