[package]
name = "smc_trading_agent"
version = "1.0.0-beta.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rust_decimal = { version = "1.32", features = ["serde-arbitrary-precision"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Note: Using mock implementations for demo purposes
# barter-execution = "0.6.0"
# barter-integration = "0.9.2"
ccxt-rs = "0.3.0"
async-trait = "0.1"
lazy_static = "1.4"
prometheus = "0.13"
metrics = "0.21.0"
metrics-exporter-prometheus = "0.12.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
criterion = "0.5"
testcontainers = "0.15"

