[package]
name = "smc_trading_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rust_decimal = "1.32"
uuid = { version = "1.3", features = ["v4"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
barter-execution = "0.6.0"
barter-integration = "0.9.2"

